html + css structure

--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
     <link href="./resources/css/style.css" type="text/css" rel="stylesheet">
   </head>
   <body>
-
+  <!-- HEADER -->
+    <header>
+      <div class=logo flex></div>
+    <header/>
+  <!-- BANNER -->
+  <!-- CONTENT -->
+  <!-- INFO BAR -->
+  <!-- COURSES CATALOG -->
+  <!-- THESIS EXHIBIT -->
+  <!-- FOOTER -->
   </body>
 </html>
