--- a/index.html
+++ b/index.html
@@ -9,10 +9,41 @@
   <body>
   <!-- HEADER -->
     <header>
-      <div class=logo flex></div>
-    <header/>
+      <div class="logo">
+        <img src="resources/images/ic-logo.svg"/>
+        <span>COLMARACADEMY</span>
+      </div>
+      <nav>
+        <a>On campus</a>
+        <a>Online</a>
+        <a>or companies</a>
+        <a>Sign in</a>
+      </nav>
+    </header>
   <!-- BANNER -->
+    <div class="banner">
+      <div class="student">
+        <img src="resources/images/banner.jpg"/>
+      </div>
+      <div class="descr">
+        <h1>Learn something new everyday</h1>
+        <p>Lorem Ipsum dolor sit amet, consectetur adipiscing elit</p>
+        <p>start here</p>
+      </div>
+    </div>
   <!-- CONTENT -->
+    <div class="content">
+      <div class="student">
+        <img src="resources/images/information-main.jpg"/>
+      </div>
+      <div class="descr">
+        <h1>It doesn't hurt to keep practicing</h1>
+        <p>Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Cras ac elementum nibh.
+          Maecenas felis augue, euismod id luctus sit amet, volutpat ac felis.
+          Nulla sed nunc at ipsum laoreet placerat venenatis nec dolor. Donec gravida, metus et pulvinar egestas, lorem sapien placerat elit, quis consequat odio sem at quam.</p>
+        <p>Emanuel, Sr Strategist at Hiring.com</p>
+      </div>
+    </div>
   <!-- INFO BAR -->
   <!-- COURSES CATALOG -->
   <!-- THESIS EXHIBIT -->
