--- a/index.html
+++ b/index.html
@@ -43,10 +43,45 @@
           Nulla sed nunc at ipsum laoreet placerat venenatis nec dolor. Donec gravida, metus et pulvinar egestas, lorem sapien placerat elit, quis consequat odio sem at quam.</p>
         <p>Emanuel, Sr Strategist at Hiring.com</p>
       </div>
-    </div>
   <!-- INFO BAR -->
+      <div class="info">
+        <div class="item">
+        </div>
+        <div class="item">
+        </div>
+        <div class="item">
+        </div>
+      </div>
+    </div>
   <!-- COURSES CATALOG -->
+    <div class="catalog">
+      <h1>Start learning</h1>
+      <div class="course">
+      </div>
+      <div class="course">
+      </div>
+      <div class="course">
+      </div>
+      <div class="course">
+      </div>
+      <div class="course">
+      </div>
+      <div class="course">
+      </div>
+    </div>
   <!-- THESIS EXHIBIT -->
+    <div class="content">
+      <div class="video">
+      </div>
+      <div class="descr">
+      </div>
+    </div>
+    <div class="info">
+      <div class="item">
+      </div>
+      <div class="item">
+      </div>
+    </div>
   <!-- FOOTER -->
   </body>
 </html>
