--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <img src="resources/images/information-main.jpg"/>
       </div>
       <div class="descr">
-        <h1>It doesn't hurt to keep practicing</h1>
+        <h2>It doesn't hurt to keep practicing</h2>
         <p>Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Cras ac elementum nibh.
           Maecenas felis augue, euismod id luctus sit amet, volutpat ac felis.
           Nulla sed nunc at ipsum laoreet placerat venenatis nec dolor. Donec gravida, metus et pulvinar egestas, lorem sapien placerat elit, quis consequat odio sem at quam.</p>
@@ -46,16 +46,28 @@
   <!-- INFO BAR -->
       <div class="info">
         <div class="item">
+          <img src""/>
+          <h3>Orientation date</h3>
+          <p>Tue 10/11 & Wed 10/12: 8am-3pm</p>
+          <a>Read more</a>
         </div>
         <div class="item">
+          <img src""/>
+          <h3>Our Campus</h3>
+          <p>Find which campus is close by you</p>
+          <a>Read more</a>
         </div>
         <div class="item">
+          <img src""/>
+          <h3>Our guest lecture</h3>
+          <p>Join a keynote with Oliver Sack about music in medical treatment</p>
+          <a>Read more</a>
         </div>
       </div>
     </div>
   <!-- COURSES CATALOG -->
     <div class="catalog">
-      <h1>Start learning</h1>
+      <h2>Start learning</h2>
       <div class="course">
       </div>
       <div class="course">
@@ -71,17 +83,30 @@
     </div>
   <!-- THESIS EXHIBIT -->
     <div class="content">
+      <h2>This Exhibit</h2>
       <div class="video">
       </div>
       <div class="descr">
+        <h3>Reimagine Urban</h3>
+        <p>"Curabitur...""</p>
       </div>
     </div>
     <div class="info">
       <div class="item">
+        <h3>Fisma: Design and Prototype</h3>
+        <p>Designer showcase of new prototype product</p>
       </div>
       <div class="item">
+        <h3>Now and then</h3>
+        <p>Research study about New York</p>
       </div>
     </div>
   <!-- FOOTER -->
+    <footer>
+      <div class="copyright">
+      </div>
+      <div class="terms">
+      </div>
+    </footer>
   </body>
 </html>
