flexed header banner content

--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
   </head>
   <body>
   <!-- HEADER -->
-    <header>
+  <div class="container">
+    <header class="flex">
       <div class="logo">
         <img src="resources/images/ic-logo.svg"/>
         <span>COLMARACADEMY</span>
@@ -21,7 +22,7 @@
       </nav>
     </header>
   <!-- BANNER -->
-    <div class="banner">
+    <div class="banner flex">
       <div class="student">
         <img src="resources/images/banner.jpg"/>
       </div>
@@ -32,11 +33,9 @@
       </div>
     </div>
   <!-- CONTENT -->
-    <div class="content">
+    <div class="content flex">
       <div class="student">
         <img src="resources/images/information-main.jpg"/>
-      </div>
-      <div class="descr">
         <h2>It doesn't hurt to keep practicing</h2>
         <p>Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Cras ac elementum nibh.
           Maecenas felis augue, euismod id luctus sit amet, volutpat ac felis.
@@ -104,9 +103,13 @@
   <!-- FOOTER -->
     <footer>
       <div class="copyright">
+        <span>Copyright</span>
       </div>
       <div class="terms">
+        <span>Terms</span>
+        <span>Privacy</span>
       </div>
     </footer>
+  </div>
   </body>
 </html>
