--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     </div>
   <!-- CONTENT -->
     <div class="content flex">
-      <div class="student">
+      <div class="student descr">
         <img src="resources/images/information-main.jpg"/>
         <h2>It doesn't hurt to keep practicing</h2>
         <p>Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Cras ac elementum nibh.
@@ -45,22 +45,28 @@
   <!-- INFO BAR -->
       <div class="info">
         <div class="item">
-          <img src""/>
-          <h3>Orientation date</h3>
-          <p>Tue 10/11 & Wed 10/12: 8am-3pm</p>
-          <a>Read more</a>
+          <img src="resources/images/information-orientation.jpg"/>
+          <div class="text">
+            <h3>Orientation date</h3>
+            <p>Tue 10/11 & Wed 10/12: 8am-3pm</p>
+            <a>Read more</a>
+         </div>
         </div>
         <div class="item">
-          <img src""/>
-          <h3>Our Campus</h3>
-          <p>Find which campus is close by you</p>
-          <a>Read more</a>
+          <img src="resources/images/information-campus.jpg"/>
+          <div class="text">
+            <h3>Our Campus</h3>
+            <p>Find which campus is close by you</p>
+            <a>Read more</a>
+          </div>
         </div>
         <div class="item">
-          <img src""/>
-          <h3>Our guest lecture</h3>
-          <p>Join a keynote with Oliver Sack about music in medical treatment</p>
-          <a>Read more</a>
+          <img src="resources/images/information-guest-lecture.jpg"/>
+          <div class="text">
+            <h3>Our guest lecture</h3>
+            <p>Join a keynote with Oliver Sack about music in medical treatment</p>
+            <a>Read more</a>
+          </div>
         </div>
       </div>
     </div>
