padding imgs info div removed container

--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
   </head>
   <body>
   <!-- HEADER -->
-  <div class="container">
     <header class="flex">
       <div class="logo">
         <img src="resources/images/ic-logo.svg"/>
@@ -34,7 +33,7 @@
     </div>
   <!-- CONTENT -->
     <div class="content flex">
-      <div class="student descr">
+      <div class="student">
         <img src="resources/images/information-main.jpg"/>
         <h2>It doesn't hurt to keep practicing</h2>
         <p>Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Cras ac elementum nibh.
@@ -116,6 +115,5 @@
         <span>Privacy</span>
       </div>
     </footer>
-  </div>
   </body>
 </html>
