--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
       </div>
     </div>
   <!-- COURSES CATALOG -->
+    <h2>Start Learning</h2>
     <div class="catalog flex">
       <div class="course">
         <img src="resources/images/course-software.jpg"/>
@@ -109,27 +110,34 @@
       </div>
   </div>
   <!-- THESIS EXHIBIT -->
-    <div class="content">
-      <h2>This Exhibit</h2>
+    <h2>This Exhibit</h2>
+    <div class="content flex">
       <div class="video">
-      </div>
-      <div class="descr">
+        <video>
+          <source src="resources/videos/thesis.mp4" type="video/mp4" autoplay muted>
+        </video>
         <h3>Reimagine Urban</h3>
         <p>"Curabitur...""</p>
       </div>
+      <div class="info">
+        <div class="item">
+          <img src="resources/images/thesis-fisma.jpg"/>
+          <div class="text">
+            <h3>Fisma: Design and Prototype</h3>
+            <p>Designer showcase of new prototype product</p>
+          </div>
+        </div>
+        <div class="item">
+          <img src="resources/images/thesis-now-and-then.jpg"/>
+          <div class="text">
+            <h3>Now and then</h3>
+            <p>Research study about New York</p>
+          </div>
+        </div>
     </div>
-    <div class="info">
-      <div class="item">
-        <h3>Fisma: Design and Prototype</h3>
-        <p>Designer showcase of new prototype product</p>
-      </div>
-      <div class="item">
-        <h3>Now and then</h3>
-        <p>Research study about New York</p>
-      </div>
-    </div>
+  </div>
   <!-- FOOTER -->
-    <footer>
+    <footer class="flex">
       <div class="copyright">
         <span>Copyright</span>
       </div>
