edited h2, h3, fixed infobar offset from container

--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
       <div class="student">
         <img src="resources/images/banner.jpg"/>
       </div>
-      <div class="descr">
+      <div class="descr flex">
         <h1>Learn something new everyday</h1>
-        <p>Lorem Ipsum dolor sit amet, consectetur adipiscing elit</p>
+        <span>Lorem Ipsum dolor sit amet, consectetur adipiscing elit</span>
         <p>start here</p>
       </div>
     </div>
@@ -70,7 +70,9 @@
       </div>
     </div>
   <!-- COURSES CATALOG -->
-    <h2>Start Learning</h2>
+    <div class="title flex">
+      <h2>Start Learning</h2>
+    </div>
     <div class="catalog flex">
       <div class="course">
         <img src="resources/images/course-software.jpg"/>
@@ -110,14 +112,18 @@
       </div>
   </div>
   <!-- THESIS EXHIBIT -->
-    <h2>This Exhibit</h2>
+    <div class="title flex">
+      <h2>This Exhibit</h2>
+    </div>
     <div class="content flex">
       <div class="video">
         <video>
           <source src="resources/videos/thesis.mp4" type="video/mp4" autoplay muted>
         </video>
         <h3>Reimagine Urban</h3>
-        <p>"Curabitur...""</p>
+        <p>"Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Cras ac elementum nibh.
+          Maecenas felis augue, euismod id luctus sit amet, volutpat ac felis. Nulla sed nunc at ipsum laoreet placerat venenatis nec dolor.
+          Donec gravida, metus et pulvinar egestas, lorem sapien placerat elit, quis consequat odio sem at quam"</p>
       </div>
       <div class="info">
         <div class="item">
