--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
     <title>Colmar Academy</title>
     <link href="./resources/css/reset.css" type="text/css" rel="stylesheet">
     <link href="./resources/css/style.css" type="text/css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Poppins:400,500,600" rel="stylesheet">
   </head>
   <body>
   <!-- HEADER -->
     <header class="flex">
       <div class="logo">
         <img src="resources/images/ic-logo.svg"/>
-        <span>COLMARACADEMY</span>
+        <span style="font-weight: bold;">COLMAR</span><span>ACADEMY</span>
       </div>
       <nav>
         <a>On campus</a>
@@ -25,10 +26,12 @@
       <div class="student">
         <img src="resources/images/banner.jpg"/>
       </div>
-      <div class="descr flex">
+      <div class="descr">
+        <div class="button flex">
         <h1>Learn something new everyday</h1>
         <span>Lorem Ipsum dolor sit amet, consectetur adipiscing elit</span>
-        <p>start here</p>
+        <p>Start here</p>
+        </div>
       </div>
     </div>
   <!-- CONTENT -->
@@ -39,7 +42,7 @@
         <p>Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Cras ac elementum nibh.
           Maecenas felis augue, euismod id luctus sit amet, volutpat ac felis.
           Nulla sed nunc at ipsum laoreet placerat venenatis nec dolor. Donec gravida, metus et pulvinar egestas, lorem sapien placerat elit, quis consequat odio sem at quam.</p>
-        <p>Emanuel, Sr Strategist at Hiring.com</p>
+        <span>Emanuel, Sr Strategist at Hiring.com</span>
       </div>
   <!-- INFO BAR -->
       <div class="info">
@@ -76,39 +79,51 @@
     <div class="catalog flex">
       <div class="course">
         <img src="resources/images/course-software.jpg"/>
-        <h3>Software engineering</h3>
-        <p>COURSE</p>
-        <p>Web Development, Mobile Development, iOT, APIs</p>
+        <div class= "detail">
+          <h3>Software engineering</h3>
+          <p>COURSE</p>
+          <p>Web Development, Mobile Development, iOT, APIs</p>
+        </div>
       </div>
       <div class="course">
         <img src="resources/images/course-computer-art.jpg"/>
-        <h3>Computer art</h3>
-        <p>COURSE</p>
-        <p>Imaging & Design, Web Design, Motion Graphics & Visual Effects, Computer Animation</p>
+        <div class= "detail">
+          <h3>Computer art</h3>
+          <p>COURSE</p>
+          <p>Imaging & Design, Web Design, Motion Graphics & Visual Effects, Computer Animation</p>
+        </div>
       </div>
       <div class="course">
         <img src="resources/images/course-design.jpg"/>
-        <h3>Design</h3>
-        <p>COURSE</p>
-        <p>User Experience Design, User Research, Visual Design</p>
+        <div class= "detail">
+          <h3>Design</h3>
+          <p>COURSE</p>
+          <p>User Experience Design, User Research, Visual Design</p>
+        </div>
       </div>
       <div class="course">
         <img src="resources/images/course-data.jpg"/>
-        <h3>Data</h3>
-        <p>COURSE</p>
-        <p>Data Science, Big Data, SQL, Data Visualization</p>
+        <div class= "detail">
+          <h3>Data</h3>
+          <p>COURSE</p>
+          <p>Data Science, Big Data, SQL, Data Visualization</p>
+        </div>
       </div>
       <div class="course">
         <img src="resources/images/course-business.jpg"/>
-        <h3>Business</h3>
-        <p>COURSE</p>
-        <p>Product Development, Business Development, Startup</p>
+        <div class= "detail">
+          <h3>Business</h3>
+          <p>COURSE</p>
+          <p>Product Development, Business Development, Startup</p>
+        </div>
       </div>
       <div class="course">
         <img src="resources/images/course-marketing.jpg"/>
-        <h3>Marketing</h3>
-        <p>COURSE</p>
-        <p>Analytics, Content Marketing, Mobile Marketing</p>
+        <div class= "detail">
+          <h3>Marketing</h3>
+          <p>COURSE</p>
+          <p>Analytics, Content Marketing, Mobile Marketing</p>
+        </div>
       </div>
   </div>
   <!-- THESIS EXHIBIT -->
@@ -117,8 +132,8 @@
     </div>
     <div class="content flex">
       <div class="video">
-        <video>
-          <source src="resources/videos/thesis.mp4" type="video/mp4" autoplay muted>
+        <video controls>
+          <source src="resources/videos/thesis.mp4" type="video/mp4">
         </video>
         <h3>Reimagine Urban</h3>
         <p>"Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Cras ac elementum nibh.
@@ -145,7 +160,7 @@
   <!-- FOOTER -->
     <footer class="flex">
       <div class="copyright">
-        <span>Copyright</span>
+        <span>©Colmar Academy. All rights reserved</span>
       </div>
       <div class="terms">
         <span>Terms</span>
