fixed header, container to 960px

--- a/index.html
+++ b/index.html
@@ -17,16 +17,17 @@
       <nav>
         <a>On campus</a>
         <a>Online</a>
-        <a>or companies</a>
+        <a>For companies</a>
         <a>Sign in</a>
       </nav>
     </header>
+    <div class="container">
   <!-- BANNER -->
     <div class="banner flex">
       <div class="student">
         <img src="resources/images/banner.jpg"/>
       </div>
-      <div class="descr">
+      <div class="description">
         <div class="button flex">
         <h1>Learn something new everyday</h1>
         <span>Lorem Ipsum dolor sit amet, consectetur adipiscing elit</span>
@@ -136,9 +137,8 @@
           <source src="resources/videos/thesis.mp4" type="video/mp4">
         </video>
         <h3>Reimagine Urban</h3>
-        <p>"Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Cras ac elementum nibh.
-          Maecenas felis augue, euismod id luctus sit amet, volutpat ac felis. Nulla sed nunc at ipsum laoreet placerat venenatis nec dolor.
-          Donec gravida, metus et pulvinar egestas, lorem sapien placerat elit, quis consequat odio sem at quam"</p>
+        <p>"Curabiture vitae libero in ipsum porttitor consequat. Aliquam et commodo lectus, nec consequat neque.
+          Sed non accumsan urna. Phasellus sed consequat ex. Etiam eget magna laoreet, efficitur dolor consequat, tristique ligula"</p>
       </div>
       <div class="info">
         <div class="item">
@@ -157,6 +157,7 @@
         </div>
     </div>
   </div>
+</div>
   <!-- FOOTER -->
     <footer class="flex">
       <div class="copyright">
