--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link href="./resources/css/reset.css" type="text/css" rel="stylesheet">
     <link href="./resources/css/style.css" type="text/css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Poppins:400,500,600" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
   <body>
   <!-- HEADER -->
@@ -15,9 +16,13 @@
         <span style="font-weight: bold;">COLMAR</span><span>ACADEMY</span>
       </div>
       <nav>
+        <i class="fa fa-university" aria-hidden="true"></i>
         <a>On campus</a>
+        <i class="fa fa-cloud" aria-hidden="true"></i>
         <a>Online</a>
+        <i class="fa fa-briefcase" aria-hidden="true"></i>
         <a>For companies</a>
+        <i class="fa fa-sign-in" aria-hidden="true"></i>
         <a>Sign in</a>
       </nav>
     </header>
@@ -30,7 +35,7 @@
       <div class="description">
         <div class="button flex">
         <h1>Learn something new everyday</h1>
-        <span>Lorem Ipsum dolor sit amet, consectetur adipiscing elit</span>
+        <h4>Lorem Ipsum dolor sit amet, consectetur adipiscing elit</h4>
         <p>Start here</p>
         </div>
       </div>
