--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
       </div>
       <nav>
         <i class="fa fa-university" aria-hidden="true"></i>
-        <a>On campus</a>
+        <a href="">On campus</a>
         <i class="fa fa-cloud" aria-hidden="true"></i>
-        <a>Online</a>
+        <a href="">Online</a>
         <i class="fa fa-briefcase" aria-hidden="true"></i>
-        <a>For companies</a>
+        <a href="">For companies</a>
         <i class="fa fa-sign-in" aria-hidden="true"></i>
-        <a>Sign in</a>
+        <a href="">Sign in</a>
       </nav>
     </header>
     <div class="container">
@@ -36,7 +36,7 @@
         <div class="button flex">
         <h1>Learn something new everyday</h1>
         <h4>Lorem Ipsum dolor sit amet, consectetur adipiscing elit</h4>
-        <p>Start here</p>
+        <a href="">Start here</a>
         </div>
       </div>
     </div>
@@ -57,7 +57,7 @@
           <div class="text">
             <h3>Orientation date</h3>
             <p>Tue 10/11 & Wed 10/12: 8am-3pm</p>
-            <a>Read more</a>
+            <a href="">Read more</a>
          </div>
         </div>
         <div class="item">
@@ -65,7 +65,7 @@
           <div class="text">
             <h3>Our Campus</h3>
             <p>Find which campus is close by you</p>
-            <a>Read more</a>
+            <a href="">Read more</a>
           </div>
         </div>
         <div class="item">
@@ -73,12 +73,13 @@
           <div class="text">
             <h3>Our guest lecture</h3>
             <p>Join a keynote with Oliver Sack about music in medical treatment</p>
-            <a>Read more</a>
+            <a href="">Read more</a>
           </div>
         </div>
       </div>
     </div>
   <!-- COURSES CATALOG -->
+  <div class="section">
     <div class="title flex">
       <h2>Start Learning</h2>
     </div>
@@ -132,7 +133,9 @@
         </div>
       </div>
   </div>
+</div>
   <!-- THESIS EXHIBIT -->
+  <div class="section">
     <div class="title flex">
       <h2>This Exhibit</h2>
     </div>
@@ -162,6 +165,7 @@
         </div>
     </div>
   </div>
+</div>
 </div>
   <!-- FOOTER -->
     <footer class="flex">
