--- a/index.html
+++ b/index.html
@@ -12,17 +12,17 @@
   <!-- HEADER -->
     <header class="flex">
       <div class="logo">
-        <img src="resources/images/ic-logo.svg"/>
+        <img src="resources/images/ic-logo.svg" alt="logo"/>
         <span style="font-weight: bold;">COLMAR</span><span>ACADEMY</span>
       </div>
       <nav>
         <i class="fa fa-university" aria-hidden="true"></i>
         <a href="">On campus</a>
-        <i class="fa fa-cloud" aria-hidden="true"></i>
+        <i class="fa fa-desktop" aria-hidden="true"></i>
         <a href="">Online</a>
         <i class="fa fa-briefcase" aria-hidden="true"></i>
         <a href="">For companies</a>
-        <i class="fa fa-sign-in" aria-hidden="true"></i>
+        <i class="fa fa-user" aria-hidden="true"></i>
         <a href="">Sign in</a>
       </nav>
     </header>
@@ -30,7 +30,7 @@
   <!-- BANNER -->
     <div class="banner flex">
       <div class="student">
-        <img src="resources/images/banner.jpg"/>
+        <img src="resources/images/banner.jpg" alt="students"/>
       </div>
       <div class="description">
         <div class="button flex">
@@ -43,7 +43,7 @@
   <!-- CONTENT -->
     <div class="content flex">
       <div class="student">
-        <img src="resources/images/information-main.jpg"/>
+        <img src="resources/images/information-main.jpg" alt="student"/>
         <h2>It doesn't hurt to keep practicing</h2>
         <p>Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Cras ac elementum nibh.
           Maecenas felis augue, euismod id luctus sit amet, volutpat ac felis.
@@ -53,15 +53,15 @@
   <!-- INFO BAR -->
       <div class="info">
         <div class="item">
-          <img src="resources/images/information-orientation.jpg"/>
+          <img src="resources/images/information-orientation.jpg" alt="orientation"/>
           <div class="text">
             <h3>Orientation date</h3>
-            <p>Tue 10/11 & Wed 10/12: 8am-3pm</p>
+            <p>Tue 10/11 &amp; Wed 10/12: 8am-3pm</p>
             <a href="">Read more</a>
          </div>
         </div>
         <div class="item">
-          <img src="resources/images/information-campus.jpg"/>
+          <img src="resources/images/information-campus.jpg" alt="campus"/>
           <div class="text">
             <h3>Our Campus</h3>
             <p>Find which campus is close by you</p>
@@ -69,7 +69,7 @@
           </div>
         </div>
         <div class="item">
-          <img src="resources/images/information-guest-lecture.jpg"/>
+          <img src="resources/images/information-guest-lecture.jpg" alt="guest lecture"/>
           <div class="text">
             <h3>Our guest lecture</h3>
             <p>Join a keynote with Oliver Sack about music in medical treatment</p>
@@ -85,7 +85,7 @@
     </div>
     <div class="catalog flex">
       <div class="course">
-        <img src="resources/images/course-software.jpg"/>
+        <img src="resources/images/course-software.jpg" alt="computers"/>
         <div class= "detail">
           <h3>Software engineering</h3>
           <p>COURSE</p>
@@ -93,15 +93,15 @@
         </div>
       </div>
       <div class="course">
-        <img src="resources/images/course-computer-art.jpg"/>
+        <img src="resources/images/course-computer-art.jpg" alt="phone"/>
         <div class= "detail">
           <h3>Computer art</h3>
           <p>COURSE</p>
-          <p>Imaging & Design, Web Design, Motion Graphics & Visual Effects, Computer Animation</p>
+          <p>Imaging &amp; Design, Web Design, Motion Graphics &amp; Visual Effects, Computer Animation</p>
         </div>
       </div>
       <div class="course">
-        <img src="resources/images/course-design.jpg"/>
+        <img src="resources/images/course-design.jpg" alt="photocamera"/>
         <div class= "detail">
           <h3>Design</h3>
           <p>COURSE</p>
@@ -109,7 +109,7 @@
         </div>
       </div>
       <div class="course">
-        <img src="resources/images/course-data.jpg"/>
+        <img src="resources/images/course-data.jpg" alt="data analysis"/>
         <div class= "detail">
           <h3>Data</h3>
           <p>COURSE</p>
@@ -117,7 +117,7 @@
         </div>
       </div>
       <div class="course">
-        <img src="resources/images/course-business.jpg"/>
+        <img src="resources/images/course-business.jpg" alt="chess"/>
         <div class= "detail">
           <h3>Business</h3>
           <p>COURSE</p>
@@ -125,7 +125,7 @@
         </div>
       </div>
       <div class="course">
-        <img src="resources/images/course-marketing.jpg"/>
+        <img src="resources/images/course-marketing.jpg" alt="armclock"/>
         <div class= "detail">
           <h3>Marketing</h3>
           <p>COURSE</p>
@@ -150,14 +150,14 @@
       </div>
       <div class="info">
         <div class="item">
-          <img src="resources/images/thesis-fisma.jpg"/>
+          <img src="resources/images/thesis-fisma.jpg" alt="design sketches"/>
           <div class="text">
             <h3>Fisma: Design and Prototype</h3>
             <p>Designer showcase of new prototype product</p>
           </div>
         </div>
         <div class="item">
-          <img src="resources/images/thesis-now-and-then.jpg"/>
+          <img src="resources/images/thesis-now-and-then.jpg" alt="New York photo"/>
           <div class="text">
             <h3>Now and then</h3>
             <p>Research study about New York</p>
