--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
   <!-- THESIS EXHIBIT -->
   <div class="section">
     <div class="title flex">
-      <h2>This Exhibit</h2>
+      <h2>This exhibits</h2>
     </div>
     <div class="content flex">
       <div class="video">
