substituted fontawesóme with local icons

--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <link href="./resources/css/reset.css" type="text/css" rel="stylesheet">
     <link href="./resources/css/style.css" type="text/css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Poppins:400,500,600" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
   <body>
   <!-- HEADER -->
@@ -16,15 +15,16 @@
         <span style="font-weight: bold;">COLMAR</span><span>ACADEMY</span>
       </div>
       <nav>
-        <i class="fa fa-university" aria-hidden="true"></i>
         <a href="">On campus</a>
-        <i class="fa fa-desktop" aria-hidden="true"></i>
         <a href="">Online</a>
-        <i class="fa fa-briefcase" aria-hidden="true"></i>
         <a href="">For companies</a>
-        <i class="fa fa-user" aria-hidden="true"></i>
         <a href="">Sign in</a>
       </nav>
+      <div class="mobile-nav">
+        <img src="resources/images/ic-on-campus.svg" />
+        <img src="resources/images/ic-online.svg" />
+        <img src="resources/images/ic-login.svg" />
+      </div>
     </header>
     <div class="container">
   <!-- BANNER -->
@@ -148,7 +148,7 @@
         <p>"Curabiture vitae libero in ipsum porttitor consequat. Aliquam et commodo lectus, nec consequat neque.
           Sed non accumsan urna. Phasellus sed consequat ex. Etiam eget magna laoreet, efficitur dolor consequat, tristique ligula"</p>
       </div>
-      <div class="info">
+      <div class="info2">
         <div class="item">
           <img src="resources/images/thesis-fisma.jpg" alt="design sketches"/>
           <div class="text">
