--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         <a href="">Sign in</a>
       </nav>
       <div class="mobile-nav">
+        <img src="resources/images/ic-logo.svg" alt="logo"/>
         <img src="resources/images/ic-on-campus.svg" />
         <img src="resources/images/ic-online.svg" />
         <img src="resources/images/ic-login.svg" />
@@ -53,7 +54,8 @@
   <!-- INFO BAR -->
       <div class="info">
         <div class="item">
-          <img src="resources/images/information-orientation.jpg" alt="orientation"/>
+          <img class="desktop" src="resources/images/information-orientation.jpg" alt="orientation"/>
+          <img class="mobile" src="resources/images/information-orientation-mobile.jpg" alt="orientation"/>
           <div class="text">
             <h3>Orientation date</h3>
             <p>Tue 10/11 &amp; Wed 10/12: 8am-3pm</p>
@@ -61,7 +63,8 @@
          </div>
         </div>
         <div class="item">
-          <img src="resources/images/information-campus.jpg" alt="campus"/>
+          <img class="desktop" src="resources/images/information-campus.jpg" alt="campus"/>
+          <img class="mobile" src="resources/images/information-campus-mobile.jpg" alt="campus"/>
           <div class="text">
             <h3>Our Campus</h3>
             <p>Find which campus is close by you</p>
@@ -69,7 +72,8 @@
           </div>
         </div>
         <div class="item">
-          <img src="resources/images/information-guest-lecture.jpg" alt="guest lecture"/>
+          <img class="desktop" src="resources/images/information-guest-lecture.jpg" alt="guest lecture"/>
+          <img class="mobile" src="resources/images/information-guest-lecture-mobile.jpg" alt="guest lecture"/>
           <div class="text">
             <h3>Our guest lecture</h3>
             <p>Join a keynote with Oliver Sack about music in medical treatment</p>
