hex colors to hsl

--- a/index.html
+++ b/index.html
@@ -46,9 +46,8 @@
       <div class="student">
         <img src="resources/images/information-main.jpg" alt="student"/>
         <h2>It doesn't hurt to keep practicing</h2>
-        <p>Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Cras ac elementum nibh.
-          Maecenas felis augue, euismod id luctus sit amet, volutpat ac felis.
-          Nulla sed nunc at ipsum laoreet placerat venenatis nec dolor. Donec gravida, metus et pulvinar egestas, lorem sapien placerat elit, quis consequat odio sem at quam.</p>
+        <p>"Curabiture vitae libero in ipsum porttitor consequat. Aliquam et commodo lectus, nec consequat neque.
+          Sed non accumsan urna. Phasellus sed consequat ex. Etiam eget magna laoreet, efficitur dolor consequat, tristique ligula"</p>
         <span>Emanuel, Sr Strategist at Hiring.com</span>
       </div>
   <!-- INFO BAR -->
@@ -141,7 +140,7 @@
   <!-- THESIS EXHIBIT -->
   <div class="section">
     <div class="title flex">
-      <h2>This exhibits</h2>
+      <h2>Thesis exhibit</h2>
     </div>
     <div class="content flex">
       <div class="video">
@@ -174,7 +173,7 @@
   <!-- FOOTER -->
     <footer class="flex">
       <div class="copyright">
-        <span>©Colmar Academy. All rights reserved</span>
+        <span>©2016 Colmar Academy. All rights reserved</span>
       </div>
       <div class="terms">
         <span>Terms</span>
